contract cleanup